src/snapshots/cornercase__ui__tests__draw__renders_active_screen_in_pane.snap
---
source: src/ui.rs
expression: render(&v).backend()
---
" ▄▀▀▀ cornercase                                         │ $ echo hello                             "
" █                                                       │ hello                                    "
"                                                         │ $                                        "
"  ⌕ search projects, workspaces, tabs                    │                                          "
"                                                         │                                          "
" projects                      │ workspaces              │                                          "
"                               │                         │                                          "
"▌ ~ (1)                        │                         │                                          "
"                               │                         │                                          "
"  + new project                │                         │                                          "
"                               │                         │                                          "
"                               │                         │                                          "
"                               │                         │                                          "
"                               │                         │                                          "
"                               │                         │                                          "
" ───────────────────────────── │                         │                                          "
"  settings                     │                         │                                          "
"  quit                         │                         │                                          "
