src/snapshots/cornercase__ui__tests__draw__truncates_long_names.snap
---
source: src/ui.rs
expression: render(&v).backend()
---
" ▄▀▀▀ cornercase                                         │                                          "
" █                                                       │                                          "
"                                                         │                                          "
"  ⌕ search projects, workspaces, tabs                    │                                          "
"                                                         │                                          "
" projects                      │ workspaces              │                                          "
"                               │                         │                                          "
"▌ a-folder-with-a-real… (1)    │                         │                                          "
"                               │                         │                                          "
"  + new project                │                         │                                          "
"                               │                         │                                          "
"                               │                         │                                          "
"                               │                         │                                          "
"                               │                         │                                          "
"                               │                         │                                          "
" ───────────────────────────── │                         │                                          "
"  settings                     │                         │                                          "
"  quit                         │                         │                                          "
